--- a/src/app/components/header/header.component.css
+++ b/src/app/components/header/header.component.css
@@ -1,46 +1,62 @@
 .header {
-  background-color: #ffffff;
   padding: 1rem;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.02);
 }
 
 .header-top {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  margin-bottom: 1rem;
+  margin-bottom: 1.5rem;
+  padding: 0 10px;
+  position: relative;
+}
+
+.profile-image {
+  width: 50px;
 }
 
 .profile-image img {
-  width: 40px;
-  height: 40px;
+  width: 58px;
+  height: 58px;
   border-radius: 50%;
   object-fit: cover;
+  cursor: pointer;
 }
 
 .logo-container {
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%);
   display: flex;
   flex-direction: column;
   align-items: center;
   gap: 0.5rem;
+  z-index: 1;
 }
 
 .logo {
-  width: 48px;
-  height: 48px;
+  width: 42px;
+  height: 42px;
+  fill: var(--secondary-color);
+  cursor: pointer;
 }
 
 .app-name {
   font-size: 1.5rem;
   font-weight: bold;
-  color: #333;
+  color: var(--secondary-color);
   margin: 0;
   text-align: center;
 }
 
+.settings {
+  display: flex;
+  justify-content: flex-end;
+}
+
 .settings img {
-  width: 24px;
-  height: 24px;
+  width: 35px;
+  height: 35px;
   cursor: pointer;
   transition: transform 0.3s ease;
 }
@@ -51,11 +67,15 @@
 
 .welcome-message {
   text-align: center;
-  padding: 0.5rem 0;
 }
 
 .welcome-message h2 {
-  font-size: 1.0rem;
-  color: #666;
+  font-size: 1rem;
+  font-family: 'Roboto', sans-serif;
+  color: rgba(0, 0, 0, 0.5);
   margin: 0;
+}
+
+.empty-space {
+  width: 36px;
 }
