--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,4 +1,4 @@
-<header class="header">
+<header class="header"  [class.header-simple]="!isHomePage">
   <!-- Primera fila con los tres elementos -->
   <div class="header-top">
     <!-- Imagen de perfil a la izquierda (solo visible en home) -->
