--- a/src/app/components/navigation-menu/navigation-menu.component.css
+++ b/src/app/components/navigation-menu/navigation-menu.component.css
@@ -2,7 +2,7 @@
   display: flex;
   justify-content: space-around;
   align-items: center;
-  padding: 1rem;
+  padding: 0.5rem 1rem 0 1rem;
   background-color: var(--background-color);
 }
 
@@ -19,10 +19,16 @@
   transform: scale(1.1);
 }
 
-.nav-item img {
-  width: 24px;
-  height: 24px;
+.nav-icon {
+  width: 27px;
+  height: 27px;
   margin-bottom: 0.25rem;
+  fill: var(--quinary-color);
+  transition: fill 0.2s ease;
+}
+
+.nav-item:hover .nav-icon {
+  fill: var(--primary-color);
 }
 
 .nav-item span {
