--- a/src/app/components/header/header.component.css
+++ b/src/app/components/header/header.component.css
@@ -1,6 +1,6 @@
 .header {
-  padding: 1rem 1rem 0 1rem;
-  min-height: 93px;
+  padding: 0.1rem 1rem 0 1rem;
+  min-height: 47px;
 }
 
 .header-top {
@@ -73,9 +73,10 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  border-bottom: 1px solid color-mix(in srgb, var(--primary-color) 20%, transparent);
 }
 
 .header-simple .logo {
-  width: 7rem;
-  height: 100%;
+  width: 42px;
+  height: 42px;
 }
