--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -12,7 +12,12 @@
 
     <!-- Logo y nombre en el centro (siempre visible) -->
     <div class="logo-container">
-      <img src="assets/images/logo.svg" alt="Logo" class="logo">
+      <img 
+        src="assets/images/logo.svg" 
+        alt="Logo" 
+        class="logo" 
+        [class.clickable]="isLogoClickable"
+        (click)="isLogoClickable && navigateToHome()">
       @if (isHomePage) { 
         <h1 class="app-name">MyFitnessDiary</h1>
       }
@@ -21,7 +26,7 @@
     <!-- Icono de configuración a la derecha (solo visible en home) -->
     @if (isHomePage) {
       <div class="settings">
-        <img src="assets/icons/settings.svg" alt="Ajustes">
+        <img src="assets/icons/settings.svg" alt="Ajustes" (click)="navigateToSettings()">
       </div>
     } @else {
       <div class="empty-space"></div>
