--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <div class="app-container">
   <!-- Header que cambia según la ruta -->
-  <app-home-header [isHomePage]="isHomePage"></app-home-header>
+  <app-home-header></app-home-header>
 
   <!-- Contenido principal -->
   <main class="main-content">
