--- a/src/app/components/trainer-card/trainer-card.component.css
+++ b/src/app/components/trainer-card/trainer-card.component.css
@@ -1,7 +1,13 @@
 .trainer-card {
   display: flex;
-  gap: 1.5rem;
-  padding: 1.5rem;
+  gap: 1rem;
+  align-items: center;
+}
+
+.trainer-card-container {
+  display: flex;
+  flex-direction: column;
+  padding: 1rem;
   border-radius: 8px;
   background-color: white;
   margin-bottom: 1rem;
@@ -12,26 +18,12 @@
   flex-shrink: 0;
 }
 
-.avatar-icon {
-  width: 80px;
-  height: 80px;
+.trainer-image {
+  width: 70px;
+  height: 70px;
   border-radius: 50%;
+  object-fit: cover;
   border: 2px solid #6b46c1;
-  background-color: #f3f4f6;
-  position: relative;
-}
-
-.avatar-icon::after {
-  content: '';
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  width: 40px;
-  height: 40px;
-  background-image: url('data:image/svg+xml,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="%236b46c1"><path d="M12 12c2.21 0 4-1.79 4-4s-1.79-4-4-4-4 1.79-4 4 1.79 4 4 4zm0 2c-2.67 0-8 1.34-8 4v2h16v-2c0-2.66-5.33-4-8-4z"/></svg>');
-  background-repeat: no-repeat;
-  background-position: center;
 }
 
 .trainer-info {
@@ -39,8 +31,6 @@
 }
 
 .trainer-name {
-  font-size: 1.5rem;
-  font-weight: bold;
   margin: 0 0 0.5rem 0;
   color: #1a1a1a;
 }
@@ -61,7 +51,6 @@
 }
 
 .trainer-contact a {
-  color: #6b46c1;
   text-decoration: none;
 }
 
