--- a/src/app/components/trainer-card/trainer-card.component.html
+++ b/src/app/components/trainer-card/trainer-card.component.html
@@ -1,20 +1,22 @@
-<div class="trainer-card">
-  <div class="trainer-avatar">
-    <div class="avatar-icon"></div>
-  </div>
-  <div class="trainer-info">
-    <h2 class="trainer-name">{{trainer.name}}</h2>
-    <p class="trainer-location">Ubicación: {{trainer.location}}</p>
-    <div class="trainer-contact">
-      <p>Contacto: 
-        <a *ngIf="trainer.contact.email" [href]="'mailto:' + trainer.contact.email">{{trainer.contact.email}}</a>
-        <span *ngIf="trainer.contact.phone"><br>{{trainer.contact.phone}}</span>
-      </p>
+<div class="trainer-card-container">
+  <div class="trainer-card">
+    <div class="trainer-avatar">
+      <img [src]="trainer.image" [alt]="trainer.name" class="trainer-image">
     </div>
-    <div class="trainer-specialties">
-      <span class="specialty-tag" *ngFor="let specialty of trainer.specialties">
-        {{specialty}}
-      </span>
+    <div class="trainer-info">
+      <h2 class="trainer-name">{{trainer.name}}</h2>
+      <p class="trainer-location">Ubicación: {{trainer.location}}</p>
+      <div class="trainer-contact">
+        <p>Contacto:
+        <p *ngIf="trainer.contact.email"><a [href]="'mailto:' + trainer.contact.email">{{trainer.contact.email}}</a>
+        <p *ngIf="trainer.contact.phone"><a [href]="'tel:' + trainer.contact.phone">{{trainer.contact.phone}}</a>
+        </p>
+      </div>
     </div>
   </div>
-</div> 
+  <div class="trainer-specialties">
+    <span class="specialty-tag" *ngFor="let specialty of trainer.specialties">
+      {{specialty}}
+    </span>
+  </div>
+</div>
