Agrega la propiedad 'showBackButton' al componente DefaultHeader para controlar la visibilidad del botón de retroceso. Se actualiza app.component.html y app.component.ts para gestionar esta nueva funcionalidad, mejorando la experiencia de navegación en la aplicación.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <div class="app-container">
   <!-- Header que cambia según la ruta -->
   <app-home-header *ngIf="isHomeHeader"></app-home-header>
-  <app-default-header *ngIf="!isHomeHeader"></app-default-header>
+  <app-default-header *ngIf="!isHomeHeader" [showBackButton]="showBackButton"></app-default-header>
 
   <!-- Contenido principal -->
   <main class="main-content">
