--- a/src/app/components/header/default-header.component.html
+++ b/src/app/components/header/default-header.component.html
@@ -1,7 +1,7 @@
 <header class="header">
   <div class="header-top">
     <!-- Botón de retroceso a la izquierda -->
-    <div class="back-button" (click)="goBack()">
+    <div class="back-button" (click)="goBack()" *ngIf="showBackButton">
       <svg class="back-icon" viewBox="0 0 24 24">
         <path d="M20 11H7.83l5.59-5.59L12 4l-8 8 8 8 1.41-1.41L7.83 13H20v-2z"/>
       </svg>
