Implementa autenticación de usuario en el componente principal. Se agrega la lógica para mostrar diferentes encabezados y el menú de navegación según el estado de autenticación del usuario. Además, se añaden nuevas rutas para el inicio de sesión, registro y restablecimiento de contraseña, mejorando la gestión de la navegación en la aplicación.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,14 +1,13 @@
 <div class="app-container">
   <!-- Header que cambia según la ruta -->
-  <app-home-header *ngIf="isHomeHeader"></app-home-header>
-  <app-default-header *ngIf="!isHomeHeader" [showBackButton]="showBackButton"></app-default-header>
-
-  <!-- Contenido principal -->
-  <main class="main-content">
-    <!-- Contenido dinámico según la ruta -->
+  <ng-container *ngIf="isAuthenticated">
+    <app-home-header *ngIf="isHomeHeader"></app-home-header>
+    <app-default-header *ngIf="!isHomeHeader" [showBackButton]="showBackButton"></app-default-header>
+    <app-navigation-menu></app-navigation-menu>
     <router-outlet></router-outlet>
-  </main>
+  </ng-container>
 
-  <!-- Menú de navegación -->
-  <app-navigation-menu></app-navigation-menu>
+  <ng-container *ngIf="!isAuthenticated">
+    <router-outlet></router-outlet>
+  </ng-container>
 </div>
