Mejora el diseño del componente de inicio de sesión al agregar estilos y estructura HTML. Se implementa un contenedor para el logo, el encabezado, el cuerpo y el pie de página, además de incluir un formulario de inicio de sesión con campos para email y contraseña. Se ajustan los estilos en CSS para una mejor presentación y se eliminan propiedades innecesarias en otros componentes de estilo.

--- a/src/styles.css
+++ b/src/styles.css
@@ -14,4 +14,5 @@ body {
   background-color: var(--background-color);
   color: var(--quinary-color);
   font-family: var(--font-family);
+  margin: 0;
 }
