--- a/src/app/pages/login/login/login.component.css
+++ b/src/app/pages/login/login/login.component.css
@@ -1,4 +1,98 @@
 .login-container {
   width: 100%;
+  height: 100vh;
+  background: linear-gradient(135deg, #B9BBDE 0%, #EAC57D 80%);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 0;
+}
+
+.login-content {
+  width: 100%;
   height: 100%;
-} 
+  align-items: center;
+}
+
+.login-header {
+  height: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.login-logo {
+  width: 80%;
+  max-width: 300px;
+  height: auto;
+}
+
+.login-body {
+  height: 50%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 20px;
+}
+
+.app-name {
+  color: var(--quinary-color);
+  font-size: 2rem;
+  margin: 0;
+}
+
+.login-form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 15px;
+  width: 100%;
+  max-width: 255px;
+}
+
+.form-input {
+  width: 100%;
+  padding: 12px;
+  border: 1.5px solid var(--quinary-color);
+  border-radius: 5px;
+  font-size: 0.8rem;
+  background-color: transparent;
+  color: var(--quinary-color);
+}
+
+.form-input::placeholder {
+  color: var(--quinary-color);
+  opacity: 0.7;
+}
+
+.login-footer {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 15px;
+  width: 100%;
+  max-width: 255px;
+  margin-top: 60px;
+}
+
+.login-button {
+  width: 100%;
+  padding: 12px;
+  background-color: color-mix(in srgb, var(--quaternary-color) 50%, transparent);
+  color: white;
+  border: none;
+  border-radius: 30px;
+  font-size: 1rem;
+  cursor: pointer;
+  transition: background-color 0.3s;
+}
+
+.login-button:hover {
+  background-color: var(--quinary-color);
+}
+
+.forgot-password, .register-link {
+  color: var(--quaternary-color);
+  text-decoration: underline;
+  font-size: 0.9rem;
+}
