--- a/src/app/pages/login/login/login.component.html
+++ b/src/app/pages/login/login/login.component.html
@@ -1,4 +1,19 @@
 <div class="login-container">
-  <!-- Contenido del login -->
-  <h1> Iniciar sesión </h1>
+  <div class="login-content">
+    <div class="login-header">
+      <img src="assets/images/logo.svg" alt="Logo" class="login-logo">
+    </div>
+    <div class="login-body">
+      <h1 class="app-name">My Fitness Diary</h1>
+      <form class="login-form">
+        <input type="email" placeholder="Email" class="form-input">
+        <input type="password" placeholder="Contraseña" class="form-input">
+        <a href="/reset-password" class="forgot-password">¿Has olvidado tu contraseña?</a>
+      </form>
+      <div class="login-footer">
+        <button type="submit" class="login-button">Iniciar sesión</button>
+        <a href="/register" class="register-link">Regístrate</a>
+      </div>
+    </div>
+  </div>
 </div> 
