Ajusta el diseño del componente de registro al agregar una nueva estructura HTML y estilos CSS. Se implementa un contenedor para el logo, encabezado, cuerpo y pie de página, además de un formulario de registro con campos para nombre completo, email y contraseña. Se modifica el ancho del logo en el componente de inicio de sesión para mejorar la presentación visual.

--- a/src/app/pages/login/registration/registration.component.html
+++ b/src/app/pages/login/registration/registration.component.html
@@ -1,3 +1,27 @@
 <div class="registration-container">
-  <h1> Registrarse </h1>
+  <div class="registration-content">
+    <div class="registration-header">
+      <img src="assets/images/logo.svg" alt="Logo" class="registration-logo">
+    </div>
+    <div class="registration-body">
+      <h1 class="app-name">My Fitness Diary</h1>
+      <form class="registration-form">
+        <input type="text" placeholder="Nombre completo" class="form-input">
+        <input type="email" placeholder="Email" class="form-input">
+        <input type="password" placeholder="Contraseña" class="form-input">
+        <input type="password" placeholder="Repite contraseña" class="form-input">
+      </form>
+      <div class="registration-footer">
+        <button type="submit" class="registration-button">Registrarme y entrar</button>
+        <a href="/login" class="login-link">Ya tengo una cuenta</a>
+      </div>
+    </div>
+    <div class="privacy-container">
+      <p class="privacy-text">
+        Al registrarte, aceptas que recopilamos y utilizamos tus datos de acuerdo con nuestra 
+        <a href="#" target="_blank" class="privacy-link">Política de Privacidad</a>. 
+        Te aseguramos que tus datos estarán protegidos y solo se utilizarán para mejorar tu experiencia en MyFitnessDiary.
+      </p>
+    </div>
+  </div>
 </div> 
