--- a/src/app/pages/login/login/login.component.css
+++ b/src/app/pages/login/login/login.component.css
@@ -15,24 +15,25 @@
 }
 
 .login-header {
-  height: 50%;
+  height: 40%;
   display: flex;
   justify-content: center;
   align-items: center;
 }
 
 .login-logo {
-  width: 80%;
+  width: 50%;
   max-width: 300px;
   height: auto;
 }
 
 .login-body {
-  height: 50%;
+  height: 60%;
   display: flex;
   flex-direction: column;
   align-items: center;
   gap: 20px;
+  margin-top: 20%
 }
 
 .app-name {
@@ -72,7 +73,7 @@
   gap: 15px;
   width: 100%;
   max-width: 255px;
-  margin-top: 60px;
+  margin-top: 20px;
 }
 
 .login-button {
