--- a/src/app/pages/login/registration/registration.component.css
+++ b/src/app/pages/login/registration/registration.component.css
@@ -118,4 +118,39 @@
 .privacy-link {
   color: var(--quaternary-color);
   text-decoration: underline;
+}
+
+.password-input-container {
+  width: 100%;
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.password-errors {
+  position: absolute;
+  top: 100%;
+  left: 0;
+  width: 100%;
+  margin-top: 5px;
+  background-color: rgba(255, 255, 255, 0.9);
+  border-radius: 5px;
+  padding: 8px;
+  z-index: 1;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+}
+
+.error-message {
+  color: #ff0000;
+  font-size: 0.7rem;
+  margin: 2px 0;
+  display: flex;
+  align-items: center;
+}
+
+.error-message::before {
+  content: "•";
+  margin-right: 5px;
+  color: #ff0000;
 } 
