Implementa el componente de restablecimiento de contraseña con validación de contraseña y manejo de errores. Se agrega estructura HTML y estilos CSS para mejorar la presentación visual, incluyendo un contenedor para el logo, encabezado, cuerpo y pie de página. Se implementa la lógica para validar la contraseña y mostrar errores en tiempo real, mejorando la experiencia del usuario.

--- a/src/app/pages/login/reset-password/reset-password.component.html
+++ b/src/app/pages/login/reset-password/reset-password.component.html
@@ -1,3 +1,39 @@
 <div class="reset-password-container">
-  <h1> Restablecer contraseña </h1>
+  <div class="reset-password-content">
+    <div class="reset-password-header">
+      <img src="assets/images/logo.svg" alt="Logo" class="reset-password-logo">
+    </div>
+    <div class="reset-password-body">
+      <h1 class="app-name">My Fitness Diary</h1>
+      <form class="reset-password-form">
+        <div class="password-input-container">
+          <input 
+            type="password" 
+            placeholder="Nueva contraseña" 
+            class="form-input"
+            [(ngModel)]="password"
+            (ngModelChange)="onPasswordChange($event)"
+            (focus)="showPasswordErrors = true"
+            name="password">
+          <div class="password-errors" *ngIf="showPasswordErrors && passwordErrors.length > 0">
+            <div class="error-message" *ngFor="let error of passwordErrors">
+              {{ error }}
+            </div>
+          </div>
+        </div>
+        <div class="password-input-container">
+          <input 
+            type="password" 
+            placeholder="Repite la contraseña" 
+            class="form-input"
+            [(ngModel)]="confirmPassword"
+            (ngModelChange)="onConfirmPasswordChange($event)"
+            name="confirmPassword">
+        </div>
+      </form>
+      <div class="reset-password-footer">
+        <button type="submit" class="reset-password-button" (click)="onSave()">Guardar</button>
+      </div>
+    </div>
+  </div>
 </div> 
