--- a/src/app/pages/login/reset-password/reset-password.component.css
+++ b/src/app/pages/login/reset-password/reset-password.component.css
@@ -1,4 +1,128 @@
 .reset-password-container {
   width: 100%;
+  height: 100vh;
+  background: linear-gradient(135deg, #B9BBDE 0%, #EAC57D 80%);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 0;
+}
+
+.reset-password-content {
+  width: 100%;
   height: 100%;
+  align-items: center;
+}
+
+.reset-password-header {
+  height: 40%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.reset-password-logo {
+  width: 50%;
+  max-width: 300px;
+  height: auto;
+}
+
+.reset-password-body {
+  height: 60%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 20px;
+  margin-top: 20%;
+}
+
+.app-name {
+  color: var(--quinary-color);
+  font-size: 2rem;
+  margin: 0;
+}
+
+.reset-password-form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 15px;
+  width: 100%;
+  max-width: 255px;
+}
+
+.form-input {
+  width: 100%;
+  padding: 12px;
+  border: 1.5px solid var(--quinary-color);
+  border-radius: 5px;
+  font-size: 0.8rem;
+  background-color: transparent;
+  color: var(--quinary-color);
+}
+
+.form-input::placeholder {
+  color: var(--quinary-color);
+  opacity: 0.7;
+}
+
+.reset-password-footer {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 15px;
+  width: 100%;
+  max-width: 255px;
+  margin-top: 20px;
+}
+
+.reset-password-button {
+  width: 100%;
+  padding: 12px;
+  background-color: color-mix(in srgb, var(--quaternary-color) 50%, transparent);
+  color: white;
+  border: none;
+  border-radius: 30px;
+  font-size: 1rem;
+  cursor: pointer;
+  transition: background-color 0.3s;
+}
+
+.reset-password-button:hover {
+  background-color: var(--quinary-color);
+}
+
+.password-input-container {
+  width: 100%;
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.password-errors {
+  position: absolute;
+  top: 100%;
+  left: 0;
+  width: 100%;
+  margin-top: 5px;
+  background-color: rgba(255, 255, 255, 0.9);
+  border-radius: 5px;
+  padding: 8px;
+  z-index: 1;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+}
+
+.error-message {
+  color: #ff0000;
+  font-size: 0.7rem;
+  margin: 2px 0;
+  display: flex;
+  align-items: center;
+}
+
+.error-message::before {
+  content: "•";
+  margin-right: 5px;
+  color: #ff0000;
 } 
