--- a/src/app/components/header/default-header.component.css
+++ b/src/app/components/header/default-header.component.css
@@ -74,3 +74,61 @@
   width: 24px;
   height: 24px;
 }
+
+/* Estilos del modal */
+.modal-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: color-mix(in srgb, var(--quaternary-color) 50%, transparent);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 1000;
+}
+
+.modal-content {
+  background-color: white;
+  padding: 1rem;
+  border-radius: 15px;
+  text-align: center;
+  max-width: 90%;
+  width: 260px;
+}
+
+.modal-content h2 {
+  color: var(--quinary-color);
+  margin-bottom: 1.5rem;
+  font-size: 1rem;
+}
+
+.modal-buttons {
+  display: flex;
+  justify-content: center;
+  gap: 1rem;
+}
+
+.modal-button {
+  padding: 0.5rem 1.5rem;
+  border: none;
+  border-radius: 20px;
+  cursor: pointer;
+  font-weight: bold;
+  transition: transform 0.3s ease;
+}
+
+.modal-button:hover {
+  transform: scale(1.05);
+}
+
+.modal-button.cancel {
+  background-color: #f0f0f0;
+  color: var(--quinary-color);
+}
+
+.modal-button.confirm {
+  background-color: var(--quaternary-color);
+  color: white;
+}
