Implementa lógica para mostrar el menú de navegación condicionalmente en el componente principal. Se agrega un servicio para gestionar la visibilidad del menú y se actualiza el HTML para reflejar este cambio, mejorando la experiencia del usuario al navegar por la aplicación.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,7 +3,7 @@
   <ng-container *ngIf="isAuthenticated">
     <app-home-header *ngIf="isHomeHeader"></app-home-header>
     <app-default-header *ngIf="!isHomeHeader" [showBackButton]="showBackButton"></app-default-header>
-    <app-navigation-menu></app-navigation-menu>
+    <app-navigation-menu *ngIf="showNavMenu"></app-navigation-menu>
     <router-outlet></router-outlet>
   </ng-container>
 
