--- a/src/app/components/header/default-header.component.css
+++ b/src/app/components/header/default-header.component.css
@@ -4,6 +4,7 @@
   align-items: center;
   position: relative;
   border-bottom: 1px solid color-mix(in srgb, var(--primary-color) 80%, transparent);
+  overflow: hidden;
 }
 
 .back-button {
