--- a/src/app/pages/settings/settings.component.html
+++ b/src/app/pages/settings/settings.component.html
@@ -28,7 +28,7 @@
   </div>
 
   <!-- Botón de cambiar plan -->
-  <button class="change-plan-button">Cambiar de plan</button>
+  <button class="change-plan-button" (click)="navigateToPricing()">Cambiar de plan</button>
 
   <!-- Enlace de eliminar cuenta -->
   <div class="delete-account" (click)="openDeleteModal()">
