--- a/src/app/components/price-card/price-card.component.html
+++ b/src/app/components/price-card/price-card.component.html
@@ -1,17 +1,33 @@
-<div class="price-card">
-  <h2>{{planName}}</h2>
-  <p class="price" *ngIf="price !== null">{{price}}€/mes</p>
-  <div class="features">
-    <div class="feature" *ngFor="let feature of features">
-      <span class="check-icon"><svg width="15" height="15" viewBox="0 0 15 15" fill="none"
-          xmlns="http://www.w3.org/2000/svg">
-          <path opacity="0.5"
-            d="M7.5 13.75C10.9518 13.75 13.75 10.9518 13.75 7.5C13.75 4.04822 10.9518 1.25 7.5 1.25C4.04822 1.25 1.25 4.04822 1.25 7.5C1.25 10.9518 4.04822 13.75 7.5 13.75Z"
-            stroke="#1C274C" stroke-width="1.5" />
-          <path d="M5.3125 7.8125L6.5625 9.0625L9.6875 5.9375" stroke="#1C274C" stroke-width="1.5"
-            stroke-linecap="round" stroke-linejoin="round" />
-        </svg></span>
-      <span>{{feature.description}}</span>
+<div class="price-card" [class.clickable]="paymentLink">
+  <ng-container *ngIf="paymentLink; else noLink">
+    <a [href]="paymentLink" target="_blank" class="card-link">
+      <ng-container *ngTemplateOutlet="cardContent"></ng-container>
+    </a>
+  </ng-container>
+  <ng-template #noLink>
+    <div class="card-content">
+      <ng-container *ngTemplateOutlet="cardContent"></ng-container>
     </div>
-  </div>
+  </ng-template>
+
+  <ng-template #cardContent>
+    <h2>{{ planName }}</h2>
+    <p class="price" *ngIf="price !== null">{{ price }}€/mes</p>
+    <div class="features">
+      <div class="feature" *ngFor="let feature of features">
+        <span class="check-icon">
+          <svg width="15" height="15" viewBox="0 0 15 15" fill="none"
+               xmlns="http://www.w3.org/2000/svg">
+            <path opacity="0.5"
+              d="M7.5 13.75C10.9518 13.75 13.75 10.9518 13.75 7.5C13.75 4.04822 10.9518 1.25 7.5 1.25C4.04822 1.25 1.25 4.04822 1.25 7.5C1.25 10.9518 4.04822 13.75 7.5 13.75Z"
+              stroke="#1C274C" stroke-width="1.5" />
+            <path d="M5.3125 7.8125L6.5625 9.0625L9.6875 5.9375"
+              stroke="#1C274C" stroke-width="1.5"
+              stroke-linecap="round" stroke-linejoin="round" />
+          </svg>
+        </span>
+        <span>{{ feature.description }}</span>
+      </div>
+    </div>
+  </ng-template>
 </div>
