Reemplaza el ícono de configuración en el encabezado por un componente personalizado, mejorando la modularidad y la consistencia visual. Se añaden las importaciones necesarias para el nuevo componente de ícono.

--- a/src/app/components/header/home-header.component.html
+++ b/src/app/components/header/home-header.component.html
@@ -18,7 +18,7 @@
 
     <!-- Icono de configuración a la derecha -->
     <div class="settings">
-      <img src="assets/icons/settings.svg" alt="Ajustes" (click)="navigateToSettings()">
+      <app-settings-icon (click)="navigateToSettings()"></app-settings-icon>
     </div>
   </div>
 
