--- a/src/app/pages/template/template.component.css
+++ b/src/app/pages/template/template.component.css
@@ -29,13 +29,13 @@
 .template-info h3 {
   color: var(--quinary-color);
   font-size: 1.1rem;
-  margin-bottom: 0.5rem;
+  margin-bottom: 0px;
 }
 
 .template-info p {
   color: var(--quinary-color);
   opacity: 0.7;
-  font-size: 0.9rem;
+  font-size: 0.7rem;
 }
 
 .template-actions {
@@ -45,7 +45,7 @@
 .action-button {
   background: none;
   border: none;
-  padding: 0.5rem;
+  padding: 0.4rem;
   cursor: pointer;
   display: flex;
   align-items: center;
